<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Game"
    tools:layout_editor_absoluteY="25dp">

    <com.google.android.gms.ads.AdView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/ans4_btn"
        ads:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="25sp"
        ads:layout_constraintBottom_toBottomOf="@+id/q_area"
        ads:layout_constraintEnd_toEndOf="@+id/q_area"
        ads:layout_constraintHorizontal_bias="1.0"
        ads:layout_constraintStart_toStartOf="@+id/q_area"
        ads:layout_constraintTop_toTopOf="@+id/q_area"
        app:layout_constraintStart_toEndOf="@+id/q_area"
        app:layout_constraintTop_toBottomOf="@id/q_area" />

    <ImageView
        android:id="@+id/q_area"
        android:layout_width="wrap_content"
        android:layout_height="178dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_area"
        android:contentDescription="@string/question_area"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        ads:layout_constraintBottom_toTopOf="@+id/ans1_btn"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.0"
        ads:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/ans1_btn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        ads:layout_constraintStart_toStartOf="@+id/q_area"
        ads:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/ans2_btn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        ads:layout_constraintStart_toStartOf="@+id/ans1_btn"
        ads:layout_constraintTop_toBottomOf="@+id/ans1_btn" />

    <Button
        android:id="@+id/ans3_btn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        ads:layout_constraintStart_toStartOf="@+id/ans2_btn"
        ads:layout_constraintTop_toBottomOf="@+id/ans2_btn" />

    <Button
        android:id="@+id/ans4_btn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        ads:layout_constraintStart_toStartOf="@+id/ans3_btn"
        ads:layout_constraintTop_toBottomOf="@+id/ans3_btn" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back_arrow"
        ads:layout_constraintBottom_toTopOf="@+id/question"
        ads:layout_constraintEnd_toStartOf="@+id/score"
        ads:layout_constraintHorizontal_bias="0.08"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Score_0"
        android:textColor="#CE6D19"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/q_area"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.98"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/question_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question_no"
        android:textColor="#CE6D19"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/question"
        ads:layout_constraintEnd_toStartOf="@+id/score"
        ads:layout_constraintHorizontal_bias="0.7"
        ads:layout_constraintStart_toEndOf="@+id/back_btn"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/score"
        android:textColor="#CE6D19"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/q_area"
        ads:layout_constraintEnd_toStartOf="@+id/score"
        ads:layout_constraintStart_toEndOf="@+id/question_no"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/q_number"
        android:textColor="#CE6D19"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/q_area"
        ads:layout_constraintEnd_toStartOf="@+id/question_no"
        ads:layout_constraintHorizontal_bias="1.0"
        ads:layout_constraintStart_toEndOf="@+id/back_btn"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.96" />


</androidx.constraintlayout.widget.ConstraintLayout>